[gd_scene load_steps=10 format=3 uid="uid://cjcdsy388fl2f"]

[ext_resource type="Script" path="res://Scenes/CHARSELECT2P.gd" id="1_f7i4f"]
[ext_resource type="Texture2D" uid="uid://b2k3ixwpq4wah" path="res://Assets/Images/GUI.png" id="2_3mrm3"]
[ext_resource type="Texture2D" uid="uid://dhnjph5lvoddd" path="res://Assets/Images/GUI/Bobgraphic.png" id="3_jemla"]
[ext_resource type="Texture2D" uid="uid://dmt2cgghv4p5r" path="res://Assets/Images/Joegraphic.png" id="4_aqasu"]
[ext_resource type="Texture2D" uid="uid://ci5lfujf2iq0b" path="res://Assets/Images/GUI/Amygraphic.png" id="5_42iay"]
[ext_resource type="Texture2D" uid="uid://cipst1wwhvww8" path="res://Assets/Images/Tomgraphic.png" id="6_2050g"]
[ext_resource type="Texture2D" uid="uid://b15bi1dgw8eyx" path="res://Assets/Images/Tilesets/Tilemap1.png" id="7_8q5i8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yxe4g"]
texture = ExtResource("7_8q5i8")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
12:3/0 = 0
16:3/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
16:4/0 = 0
17:4/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
16:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
16:10/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0

[sub_resource type="TileSet" id="TileSet_2cg3e"]
sources/0 = SubResource("TileSetAtlasSource_yxe4g")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7i4f")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Exit2" type="Button" parent="Camera2D"]
offset_left = -188.0
offset_top = 77.0
offset_right = -144.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 69

[node name="Exit" type="Sprite2D" parent="Camera2D/Exit2"]
position = Vector2(22, 6)
scale = Vector2(2.67857, 2.67857)
texture = ExtResource("2_3mrm3")
hframes = 13
vframes = 14
frame = 66

[node name="Down" type="Button" parent="Camera2D"]
offset_left = -41.9999
offset_top = -9.875
offset_right = -23.9999
offset_bottom = 8.125
rotation = -1.5708
theme_override_font_sizes/font_size = 69
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Sprite2D" parent="Camera2D/Down"]
position = Vector2(6, 10)
rotation = -1.5708
scale = Vector2(2.67857, 2.67857)
texture = ExtResource("2_3mrm3")
hframes = 30
vframes = 14
frame = 150

[node name="Up" type="Button" parent="Camera2D"]
offset_left = -150.0
offset_top = -9.875
offset_right = -132.0
offset_bottom = 8.125
rotation = -1.5708
theme_override_font_sizes/font_size = 69
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Sprite2D" parent="Camera2D/Up"]
position = Vector2(12, 8)
rotation = -4.71239
scale = Vector2(2.67857, 2.67857)
texture = ExtResource("2_3mrm3")
hframes = 30
vframes = 14
frame = 150

[node name="Down2" type="Button" parent="Camera2D"]
offset_left = 141.0
offset_top = -9.875
offset_right = 159.0
offset_bottom = 8.125
rotation = -1.5708
theme_override_font_sizes/font_size = 69
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Sprite2D" parent="Camera2D/Down2"]
position = Vector2(6, 10)
rotation = -1.5708
scale = Vector2(2.67857, 2.67857)
texture = ExtResource("2_3mrm3")
hframes = 30
vframes = 14
frame = 150

[node name="Up2" type="Button" parent="Camera2D"]
offset_left = 33.0001
offset_top = -9.875
offset_right = 51.0001
offset_bottom = 8.125
rotation = -1.5708
theme_override_font_sizes/font_size = 69
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Sprite2D" parent="Camera2D/Up2"]
position = Vector2(12, 8)
rotation = -4.71239
scale = Vector2(2.67857, 2.67857)
texture = ExtResource("2_3mrm3")
hframes = 30
vframes = 14
frame = 150

[node name="Select" type="Button" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = 53.0
offset_right = 36.0
offset_bottom = 73.0

[node name="sELECT" type="Sprite2D" parent="Select"]
position = Vector2(35, 11)
scale = Vector2(2.67857, 2.67857)
texture = ExtResource("2_3mrm3")
hframes = 8
vframes = 13
frame = 48

[node name="Bobgraphic" type="Sprite2D" parent="."]
position = Vector2(-87.9999, -18.875)
scale = Vector2(3.625, 3.625)
texture = ExtResource("3_jemla")

[node name="Joegraphic" type="Sprite2D" parent="."]
position = Vector2(-87.9999, -17.875)
scale = Vector2(3.6875, 3.6875)
texture = ExtResource("4_aqasu")

[node name="Amygraphic" type="Sprite2D" parent="."]
position = Vector2(-86.9999, -17.875)
scale = Vector2(3.75, 3.75)
texture = ExtResource("5_42iay")

[node name="Tomgraphic" type="Sprite2D" parent="."]
position = Vector2(-85.9999, -19.875)
scale = Vector2(3.875, 3.875)
texture = ExtResource("6_2050g")

[node name="Bobgraphic2" type="Sprite2D" parent="."]
position = Vector2(95.0001, -18.875)
scale = Vector2(3.625, 3.625)
texture = ExtResource("3_jemla")

[node name="Joegraphic2" type="Sprite2D" parent="."]
position = Vector2(95.0001, -17.875)
scale = Vector2(3.6875, 3.6875)
texture = ExtResource("4_aqasu")

[node name="Amygraphic2" type="Sprite2D" parent="."]
position = Vector2(96.0001, -17.875)
scale = Vector2(3.75, 3.75)
texture = ExtResource("5_42iay")

[node name="Tomgraphic2" type="Sprite2D" parent="."]
position = Vector2(97.0001, -19.875)
scale = Vector2(3.875, 3.875)
texture = ExtResource("6_2050g")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_2cg3e")
format = 2
layer_0/tile_data = PackedInt32Array(-524276, 524288, 6, -524277, 524288, 6, -524278, 524288, 6, -524279, 524288, 6, -524280, 524288, 6, -524281, 524288, 6, -524282, 524288, 6, -524283, 524288, 6, -524284, 524288, 6, -524285, 524288, 6, -524286, 524288, 6, -524287, 524288, 6, -524288, 524288, 6, -458753, 524288, 6, -458754, 524288, 6, -458755, 524288, 6, -458756, 524288, 6, -458757, 524288, 6, -458758, 524288, 6, -458759, 524288, 6, -458760, 524288, 6, -458761, 524288, 6, -458762, 524288, 6, -458763, 524288, 6, -458764, 524288, 6, -458765, 524288, 6, -393229, 524288, 6, -327693, 524288, 6, -262157, 524288, 6, -196621, 524288, 6, -131085, 524288, 6, -65549, 524288, 6, -13, 524288, 6, 65522, 524288, 6, 131058, 524288, 6, 196594, 524288, 6, 262131, 524288, 6, 196595, 524288, 6, 131059, 524288, 6, 65523, 524288, 6, 327667, 524288, 6, 393203, 524288, 6, 458739, 524288, 6, 524275, 524288, 6, 524276, 524288, 6, 524277, 524288, 6, 524278, 524288, 6, 524279, 524288, 6, 524280, 524288, 6, 524281, 524288, 6, 524282, 524288, 6, 589819, 524288, 6, 589820, 524288, 6, 589821, 524288, 6, 589822, 524288, 6, 589823, 524288, 6, 524288, 524288, 6, 524289, 524288, 6, 524290, 524288, 6, 524291, 524288, 6, 524292, 524288, 6, 458756, 524288, 6, 458757, 524288, 6, 458758, 524288, 6, 458759, 524288, 6, 458760, 524288, 6, 458761, 524288, 6, 458755, 524288, 6, 458754, 524288, 6, 458753, 524288, 6, 458752, 524288, 6, 524287, 524288, 6, 524286, 524288, 6, 524285, 524288, 6, 524284, 524288, 6, 524283, 524288, 6, 458762, 524288, 6, 458763, 524288, 6, 458764, 524288, 6, 393228, 524288, 6, 327692, 524288, 6, 327693, 524288, 6, 262157, 524288, 6, 262156, 524288, 6, 196620, 524288, 6, 131084, 524288, 6, 65548, 524288, 6, 12, 524288, 6, -65524, 524288, 6, -131060, 524288, 6, -196596, 524288, 6, -262132, 524288, 6, -327668, 524288, 6, -393204, 524288, 6, -458740, 524288, 6, 131066, 458752, 8, 65530, 458752, 8, -6, 458752, 8, -65542, 458752, 8, -131078, 458752, 8, -196614, 458752, 8, -262150, 458752, 8, -327686, 458752, 8, -393222, 458752, 8, -393223, 458752, 8, -393224, 458752, 8, -393225, 458752, 8, -393226, 458752, 8, -393227, 458752, 8, -393228, 458752, 8, -327692, 458752, 8, -262156, 458752, 8, -196620, 458752, 8, -131084, 458752, 8, -65548, 458752, 8, -12, 458752, 8, 65524, 458752, 8, 131060, 458752, 8, 196596, 458752, 8, 262132, 458752, 8, 327668, 458752, 8, 393204, 458752, 8, 458740, 458752, 8, 458741, 458752, 8, 393205, 458752, 8, 327669, 458752, 8, 262133, 458752, 8, 196597, 458752, 8, 131061, 458752, 8, 65525, 458752, 8, -11, 458752, 8, -65547, 458752, 8, -131083, 458752, 8, -196619, 458752, 8, -262155, 458752, 8, -327691, 458752, 8, -327690, 458752, 8, -262154, 458752, 8, -196618, 458752, 8, -131082, 458752, 8, -65546, 458752, 8, -10, 458752, 8, 65526, 458752, 8, 131062, 458752, 8, 196598, 458752, 8, 262134, 458752, 8, 327670, 458752, 8, 393206, 458752, 8, 458742, 458752, 8, 458743, 458752, 8, 393207, 458752, 8, 327671, 458752, 8, 262135, 458752, 8, 196599, 458752, 8, 131063, 458752, 8, 65527, 458752, 8, -9, 458752, 8, -65545, 458752, 8, -131081, 458752, 8, -196617, 458752, 8, -262153, 458752, 8, -327689, 458752, 8, -327688, 458752, 8, -262152, 458752, 8, -196616, 458752, 8, -131080, 458752, 8, -65544, 458752, 8, -8, 458752, 8, 65528, 458752, 8, 131064, 458752, 8, 196600, 458752, 8, 262136, 458752, 8, 327672, 458752, 8, 393208, 458752, 8, 458744, 458752, 8, 458745, 458752, 8, 393209, 458752, 8, 327673, 458752, 8, 262137, 458752, 8, 196601, 458752, 8, 131065, 458752, 8, 65529, 458752, 8, -7, 458752, 8, -65543, 458752, 8, -131079, 458752, 8, -196615, 458752, 8, -262151, 458752, 8, -327687, 458752, 8, 196602, 458752, 8, 262138, 458752, 8, 327674, 458752, 8, 393210, 458752, 8, 458746, 458752, 8, 458747, 458752, 8, 393211, 458752, 8, 327675, 458752, 8, 262139, 458752, 8, 196603, 458752, 8, 131067, 458752, 8, 65531, 458752, 8, -5, 458752, 8, -65541, 458752, 8, -131077, 458752, 8, -196613, 458752, 8, -262149, 458752, 8, -327685, 458752, 8, -393221, 458752, 8, -393220, 458752, 8, -327684, 458752, 8, -262148, 458752, 8, -196612, 458752, 8, -131076, 458752, 8, -65540, 458752, 8, -4, 458752, 8, 65532, 458752, 8, 131068, 458752, 8, 196604, 458752, 8, 262140, 458752, 8, 327676, 458752, 8, 393212, 458752, 8, 458748, 458752, 8, 458749, 458752, 8, 393213, 458752, 8, 327677, 458752, 8, 262141, 458752, 8, 196605, 458752, 8, 131069, 458752, 8, 65533, 458752, 8, -3, 458752, 8, -65539, 458752, 8, -131075, 458752, 8, -196611, 458752, 8, -262147, 458752, 8, -327683, 458752, 8, -393219, 458752, 8, -393218, 458752, 8, -327682, 458752, 8, -262146, 458752, 8, -196610, 458752, 8, -131074, 458752, 8, -65538, 458752, 8, -2, 458752, 8, 65534, 458752, 8, 131070, 458752, 8, 196606, 458752, 8, 262142, 458752, 8, 327678, 458752, 8, 393214, 458752, 8, 458750, 458752, 8, 458751, 458752, 8, 393215, 458752, 8, 327679, 458752, 8, 262143, 458752, 8, 196607, 458752, 8, 131071, 458752, 8, 65535, 458752, 8, -1, 458752, 8, -65537, 458752, 8, -131073, 458752, 8, -196609, 458752, 8, -262145, 458752, 8, -327681, 458752, 8, -393217, 458752, 8, -458752, 458752, 8, -393216, 458752, 8, -327680, 458752, 8, -262144, 458752, 8, -196608, 458752, 8, -131072, 458752, 8, -65536, 458752, 8, 0, 458752, 8, 65536, 458752, 8, 131072, 458752, 8, 196608, 458752, 8, 262144, 458752, 8, 327680, 458752, 8, 393216, 458752, 8, 393217, 458752, 8, 327681, 458752, 8, 262145, 458752, 8, 196609, 458752, 8, 131073, 458752, 8, 65537, 458752, 8, 1, 458752, 8, -65535, 458752, 8, -131071, 458752, 8, -196607, 458752, 8, -262143, 458752, 8, -327679, 458752, 8, -393215, 458752, 8, -458751, 458752, 8, -458750, 458752, 8, -393214, 458752, 8, -327678, 458752, 8, -262142, 458752, 8, -196606, 458752, 8, -131070, 458752, 8, -65534, 458752, 8, 2, 458752, 8, 65538, 458752, 8, 131074, 458752, 8, 196610, 458752, 8, 262146, 458752, 8, 327682, 458752, 8, 393218, 458752, 8, 393219, 458752, 8, 327683, 458752, 8, 262147, 458752, 8, 196611, 458752, 8, 131075, 458752, 8, 65539, 458752, 8, 3, 458752, 8, -65533, 458752, 8, -131069, 458752, 8, -196605, 458752, 8, -262141, 458752, 8, -327677, 458752, 8, -393213, 458752, 8, -458749, 458752, 8, -458748, 458752, 8, -393212, 458752, 8, -327676, 458752, 8, -262140, 458752, 8, -196604, 458752, 8, -131068, 458752, 8, -65532, 458752, 8, 4, 458752, 8, 65540, 458752, 8, 131076, 458752, 8, 196612, 458752, 8, 262148, 458752, 8, 327684, 458752, 8, 393220, 458752, 8, 393221, 458752, 8, 327685, 458752, 8, 262149, 458752, 8, 196613, 458752, 8, 131077, 458752, 8, 65541, 458752, 8, 5, 458752, 8, -65531, 458752, 8, -131067, 458752, 8, -196603, 458752, 8, -262139, 458752, 8, -327675, 458752, 8, -393211, 458752, 8, -458747, 458752, 8, -458746, 458752, 8, -393210, 458752, 8, -327674, 458752, 8, -262138, 458752, 8, -196602, 458752, 8, -131066, 458752, 8, -65530, 458752, 8, 6, 458752, 8, 65542, 458752, 8, 131078, 458752, 8, 196614, 458752, 8, 262150, 458752, 8, 327686, 458752, 8, 393222, 458752, 8, 393223, 458752, 8, 327687, 458752, 8, 262151, 458752, 8, 196615, 458752, 8, 131079, 458752, 8, 65543, 458752, 8, 7, 458752, 8, -65529, 458752, 8, -131065, 458752, 8, -196601, 458752, 8, -262137, 458752, 8, -327673, 458752, 8, -393209, 458752, 8, -458745, 458752, 8, -458744, 458752, 8, -393208, 458752, 8, -327672, 458752, 8, -262136, 458752, 8, -196600, 458752, 8, -131064, 458752, 8, -65528, 458752, 8, 8, 458752, 8, 65544, 458752, 8, 131080, 458752, 8, 196616, 458752, 8, 262152, 458752, 8, 327688, 458752, 8, 393224, 458752, 8, 393225, 458752, 8, 327689, 458752, 8, 262153, 458752, 8, 196617, 458752, 8, 131081, 458752, 8, 65545, 458752, 8, 9, 458752, 8, -65527, 458752, 8, -131063, 458752, 8, -196599, 458752, 8, -262135, 458752, 8, -327671, 458752, 8, -393207, 458752, 8, -458743, 458752, 8, -458742, 458752, 8, -393206, 458752, 8, -327670, 458752, 8, -262134, 458752, 8, -196598, 458752, 8, -131062, 458752, 8, -65526, 458752, 8, 10, 458752, 8, 65546, 458752, 8, 131082, 458752, 8, 196618, 458752, 8, 262154, 458752, 8, 327690, 458752, 8, 393226, 458752, 8, 393227, 458752, 8, 327691, 458752, 8, 262155, 458752, 8, 196619, 458752, 8, 131083, 458752, 8, 65547, 458752, 8, 11, 458752, 8, -65525, 458752, 8, -131061, 458752, 8, -196597, 458752, 8, -262133, 458752, 8, -327669, 458752, 8, -393205, 458752, 8, -458741, 458752, 8)

[connection signal="pressed" from="Camera2D/Exit2" to="." method="_on_exit_2_pressed"]
[connection signal="pressed" from="Camera2D/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Camera2D/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Camera2D/Down2" to="." method="_on_down_2_pressed"]
[connection signal="pressed" from="Camera2D/Up2" to="." method="_on_up_2_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
